--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,24 +1,29 @@
 # server/Dockerfile
 
-# Start with a Node.js image
+# 1. Start with a Node.js image
 FROM node:18-slim
 
-# Install Python and Pip into the container
-RUN apt-get update && apt-get install -y python3 python3-pip
+# 2. Install Python and Pip
+RUN apt-get update && apt-get install -y python3 python3-pip python3-venv
 
-# Set the working directory
+# 3. Create and activate a Python virtual environment
+RUN python3 -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+# 4. Set the working directory
 WORKDIR /app
 
-# Copy and install Node.js dependencies
+# 5. Copy and install Node.js dependencies
 COPY package*.json ./
 RUN npm install
 
-# Copy and install Python dependencies (including the spaCy model)
+# 6. Copy and install Python dependencies into the virtual environment
 COPY requirements.txt ./
-RUN pip3 install -r requirements.txt
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
 
-# Copy the rest of your application code
+# 7. Copy the rest of your application code
 COPY . .
 
-# Define the command to start your server
+# 8. Define the command to start your server
 CMD ["node", "index.js"]
