--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,4 @@
-# server/requirements.txt
-
+spacy==3.7.1
 scikit-learn
-spacy
+numpy
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
