--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,5 @@
-spacy==3.7.1
-scikit-learn
+# requirements.txt
 numpy
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+scikit-learn
+spacy>=3.0.0,<4.0.0
+en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl
