--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,9 @@
 # requirements.txt
+
 numpy
 scikit-learn
-spacy>=3.0.0,<4.0.0
-en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl
+# Update spacy to a version compatible with the model (>=3.7.2)
+spacy>=3.7.2,<3.8.0
+
+# This model requires spacy version 3.7.2 or higher
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
